# sensor-health-analyzer

./: .dockerignore  .gitignore  Cargo.toml  README.md  build_docker.sh  docker-compose.yml
.cargo/: config.toml
.github/workflows/: rust.yml
cli/: Cargo.toml
cli/src/: cli.rs  main.rs
cli/src/importer/: csv.rs
collector/: Cargo.toml  Dockerfile  README.md
collector/src/: main.rs
collector/src/ingestion/: mod.rs
common/: Cargo.toml
common/src/: lib.rs  settings.rs
core/src/: models.rs
data/: sensor_data.csv
db/: Cargo.toml
db/migrations/: 20250824100615_seed_sensors.down.sql  20250824100615_seed_sensors.up.sql
db/src/: lib.rs
dispatcher/: Dockerfile  entrypoint.sh
dispatcher/src/: main.rs
docs/: requirements.md
evaluator/: Cargo.toml  build.rs
evaluator/onnx/: grill_predictions.ipynb  grill_predictor_meta.json
evaluator/src/: main.rs
evaluator/src/models/: grill.rs  mod.rs  temp_health.rs
infra/: Cargo.toml
infra/src/persistence/: mod.rs  postgres.rs
messaging/: Cargo.toml
messaging/src/: lib.rs
mqtt_sim/: Cargo.toml
mqtt_worker/: Dockerfile
mqtt_worker/src/: main.rs
proto/: evaluation.proto
sensor_simulator/src/: main.rs
sensor_store/: Cargo.toml
sensor_store/.sqlx/: query-dfceb964d24b76edc423c533b91fdb12ff56c6a13abacc21d1c7e034e9cb9017.json  query-e1906a1d1ef9ef771346416c6230e0e026860b1cb02e587d237d0d41eec80884.json
sensor_store/src/: lib.rs  models.rs
