[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
anyhow.workspace = true
sensorvault-infra = { path = "../infra" }
sensorvault-core = { path = "../core" }
clap = { version = "4.6.0", features = ["derive"] }
csv = "1.4.0"
serde = { version = "1.0.228", features = ["derive"] }
chrono = "0.4.44"