[package]
name = "evaluator"
version = "0.1.0"
edition = "2024"

[dependencies]
ort = { version = "2.0.0-rc.12", features = ["ndarray"] }
ndarray = "0.17.2"
anyhow = "1.0.102"
tonic = "*"
prost = "0.14"
tonic-prost = "*"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-prost-build = "*"