[package]
name = "evaluator"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ort = { version = "2.0.0-rc.12", features = ["ndarray", "coreml"] }
ndarray = "0.17.2"
anyhow.workspace = true
tonic = "*"
prost = "0.14"
tonic-prost = "*"
clap = { version = "4.6.0", features = ["derive"]}
infra = { path = "../infra" }
log = "0.4.27"
sensorvault-core = { path = "../core" }

[build-dependencies]
tonic-prost-build = "*"