[package]
name = "sensorvault-evaluator"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
sensorvault-core = { path = "../core" }
sensorvault-infra = { path = "../infra" }
ort = { version = "2.0.0-rc.12", features = ["ndarray", "coreml"] }
ndarray = "0.17.2"
tonic = "*"
prost = "0.14"
tonic-prost = "*"
clap = { version = "4.6.0", features = ["derive"]}

[build-dependencies]
tonic-prost-build = "*"