[package]
name = "sensor_store"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "postgres", "uuid", "chrono" ] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8.5"
chrono = "0.4"
common = { path = "../common" }